--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <title>Cinema Info</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <a class="header-main" href="#">시네마인포</a>
-            <a href="#">최신영화</a>
-            <a href="#">TOP 10</a>
-            <a href="#">장르별</a>
-            <a href="#">시네마뉴스</a>
-        </header>
-        
-        <footer>
-            <p>&nbsp;&nbsp;&copy; 2023 시네마인포(Cinema-info)</p>
-        </footer>
-    <script src="script.js"></script>
-    </body>
+<html>
+<head>
+    <title>시네마인포</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <a href="#">시네마인포</a>
+            <div>
+                <a href="pages/new_movie/home.html">최신영화</a>
+                <a href="pages/top_10/home.html">TOP5</a>
+                <a href="pages/genre/home.html">장르별 영화</a>
+                <a href="pages/cinema_news/home.html">시네마뉴스</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        안녕하세요.
+    </main>
+    <footer>
+        &copy; 2023 시네마인포 by Ko Kyeong Tae
+    </footer>
+</body>
 </html>
