각 탭 영화 및 이슈 내용 완성. 메인 만들어야됨

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <a href="#">시네마인포</a>
             <div>
                 <a href="pages/new_movie/home.html">최신영화</a>
-                <a href="pages/top_10/home.html">TOP5</a>
-                <a href="pages/genre/home.html">장르별 영화</a>
-                <a href="pages/cinema_news/home.html">시네마뉴스</a>
+                <a href="pages/top_5/home.html">TOP5</a>
+                <a href="pages/theme/home.html">테마별 영화</a>
+                <a href="pages/cinema_issue/home.html">시네마이슈</a>
             </div>
         </nav>
     </header>
