--- a/pages/new_movie/home.html
+++ b/pages/new_movie/home.html
@@ -32,9 +32,9 @@
             <a href="../../index.html">시네마인포</a>
             <div>
                 <a href="#">최신영화</a>
-                <a href="pages/top_10/home.html">TOP5</a>
-                <a href="pages/genre/home.html">장르별 영화</a>
-                <a href="pages/cinema_news/home.html">시네마뉴스</a>
+                <a href="../top_5/home.html">TOP5</a>
+                <a href="../theme/home.html">테마별 영화</a>
+                <a href="../cinema_issue/home.html">시네마이슈</a>
             </div>
         </nav>
     </header>
