--- a/pages/details/그대들은_어떻게_살_것인가.html
+++ b/pages/details/그대들은_어떻게_살_것인가.html
@@ -4,12 +4,19 @@
     <title>영화 상세보기 - 시네마인포</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="details_style.css">
+    <script src="details_script.js"></script>
+    <style>
+        body {
+            background: linear-gradient(45deg, #AAA, #000,#000);
+        }
+    </style>
 </head>
 <body>
     <div class="movie-detail">
         <div class="poster">
             <img src="../../images/poster/그대들은_어떻게_살_것인가.jpeg" alt="영화 포스터">
             <h1>그대들은 어떻게 살 것인가</h1>
+            2023
         </div>
         <div class="info">
             <!--소개글-->
