--- a/pages/cinema_issue/issue1.html
+++ b/pages/cinema_issue/issue1.html
@@ -21,7 +21,7 @@
         <main>
             <h2>전 세계 최고의 액션배우 톰 크루즈가 돌아왔다!</h2>
             <hr />
-            <img src="issue1img.jpeg" width="50%" />
+            <img src="../../images/issue/issue1img.jpeg" width="50%" />
             <h3>
                 전대미문, 유일무이한 액션 배우 톰 크루즈의 컴백: &lt;탑건:
                 매버릭&gt;
