--- a/pages/cinema_issue/issue2.html
+++ b/pages/cinema_issue/issue2.html
@@ -21,7 +21,7 @@
         <main>
             <h2>극과 극의 삶을 사는 두 가족의 만남이 빚어낸 신선한 스토리</h2>
             <hr />
-            <img src="issue2img.jpeg" width="50%" />
+            <img src="../../images/issue/issue2img.jpeg" width="50%" />
             <p>
                 “같이 잘 살면 안 될까요?” 공생이 어려워진 각박한 시대를 살아가는
                 사람들의 이야기 봉준호 감독은 &lt;기생충&gt;에서 전작을 통틀어
