--- a/pages/cinema_issue/issue3.html
+++ b/pages/cinema_issue/issue3.html
@@ -21,7 +21,7 @@
         <main>
             <h2>“나는 이제 죽음이요, 세상의 파괴자가 되었다.”</h2>
             <hr />
-            <img src="issue3img.jpeg" width="50%" />
+            <img src="../../images/issue/issue3img.jpeg" width="50%" />
             <h3>
                 "크리스토퍼 놀란 감독 역대 최고의 걸작", "2023년 최고의 영화!”
                 글로벌 개봉 이후 쏟아지는 호평! 로튼토마토 신선도 & 팝콘지수
