--- a/pages/details/인터스텔라.html
+++ b/pages/details/인터스텔라.html
@@ -3,8 +3,8 @@
 <head>
     <title>영화 상세보기 - 시네마인포</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="details_style.css">
-    <script src="details_script.js"></script>
+    <link rel="stylesheet" href="/css/details_style.css">
+    <script src="/js/details_script.js"></script>
     <style>
         body {
             background: linear-gradient(45deg, #EEE, #000,#000);
